feat(gui): 增强MultiPickerScreen支持JEI书签模式下的流体选择
- 扩展JEI书签模式，现在支持物品和流体混合显示在同一页
- 添加bookmarkFluids字段存储书签中的流体列表
- 实现isBookmarkFluidIndex方法区分物品和流体索引段
- 更新curFluid方法支持从书签模式获取流体
- 修正过滤和标签查询逻辑以兼容流体书签项目

feat(gui): 添加Ctrl+Shift+左键创建无限胞功能

- 新增INFINITY_CELL_ID常量定义ExtendedAE无限胞物品ID
- 实现addInfinityCellFromGrid方法用于直接构建指向资源的无限胞
- 支持物品和流体类型的无限胞NBT数据构造
- 添加客户端消息提示功能showClientMessage
- 更新操作提示文字说明新的快捷键功能

feat(chat): 扩展聊天消息路由至会员中心屏幕

- 修改ShopChatMirror类支持[会员中心]和[山海银行]前缀的消息
- 将相关系统消息路由到ShopMembershipScreen屏幕的横幅显示
- 更新类文档说明新增的会员中心消息处理功能